[package]
name = "tus_client"
version = "0.1.1" # remember to update html_root_url
authors = ["Jon Grythe Stødle <jonstodle@outlook.com>", "Bram Buurlage <bram@aeroscan.nl>"]
edition = "2018"
license = "MIT"
description = "A Rust native client library to interact with *tus* enabled endpoints."
keywords = ["tus", "upload", "resumable"]
repository = "https://github.com/jonstodle/tus_client"
readme = "README.md"

[dependencies]
base64 = "0.22"
futures = "0.3.30"
reqwest = { version = "0.11", optional = true }

[dev-dependencies]
rand = "0.7.0"
